--- a/src/pages/Manual/globals.module.css
+++ b/src/pages/Manual/globals.module.css
@@ -2,7 +2,6 @@
   background-color: rgb(238, 237, 237, 1);
   border-radius: 10px;
   width: 95%;
-
   margin: auto;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.301);
   text-align: center;
@@ -49,8 +48,15 @@
   align-content: center;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
 }
-
+.videoYoutube{
+  width: 560px;
+  height: 315px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin: auto;
+}
 @media (max-width: 768px) {
   .container {
     grid-template-columns: 1fr;
