--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -11,12 +11,14 @@
   }
   
   .title2 {
-    color: #272727;
+    color: #ffffff;
     font-size: 35px;
+    background: #6CBF69;
+
   }
   
   .title3 {
-    color: #005acf;
+    color: #03318C;
     font-size: 25px;
     padding: 10px;
   }
