--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -1,76 +1,104 @@
 .section {
-    background-color: rgb(224, 224, 224);
+  background-color: rgb(224, 224, 224);
 
-    width: 70%;
-    margin: auto;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.301);
-    text-align: center;
-    gap: 10px;
-    flex-wrap: wrap;
-    color: #1f1f1f
-  }
-  
-  .title2 {
-    color: #ffffff;
-    font-size: 35px;
-    background: #6CBF69;
+  width: 70%;
+  margin: auto;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.301);
+  text-align: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  color: #1f1f1f;
+}
 
-  }
-  
-  .title3 {
-    color: #03318C;
-    font-size: 25px;
-    padding: 10px;
-  }
-  
-  .fontBold {
-    font-weight: bold;
-  }
-  
-  .p1 {
-    font-size: 18px;
-    line-height: 1.8;
-    text-align: start;
-    padding-left: 50px;
+.title2 {
+  color: #ffffff;
+  font-size: 35px;
+  background: #6cbf69;
+}
 
+.title3 {
+  color: #03318c;
+  font-size: 25px;
+  padding: 10px;
+}
+
+.fontBold {
+  font-weight: bold;
+}
+
+.p1 {
+  font-size: 18px;
+  line-height: 1.8;
+  text-align: start;
+  padding-left: 50px;
+}
+
+.p2 {
+  font-size: 18px;
+  line-height: 2;
+  text-align: center;
+  padding-left: 25px;
+}
+.p3 {
+  font-size: 22px;
+  line-height: 2;
+  text-align: center;
+}
+
+.container {
+  background-color: rgb(238, 237, 237, 1);
+  border-radius: 10px;
+  width: 70%;
+  margin: auto;
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.301);
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+@media (max-width: 768px) {
+  .section {
+    width: 95%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.301);
   }
 
-  .p2{
-    font-size: 18px;
-    line-height: 2.0;
-    text-align: center;
-    padding-left: 25px;
-  }
-  .p3{
-    font-size: 22px;
-    line-height: 2.0;
-    text-align: center;
-  }
-  
   .container {
     background-color: rgb(238, 237, 237, 1);
     border-radius: 10px;
-    width: 70%;
-    margin:auto;
-    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.301);
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    padding: 10px;
+    width: 95%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.301);
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 5px;
+  }
 
+  .title2 {
+    color: #ffffff;
+    font-size: 25px;
+  }
+  .title3 {
+    color: #03318c;
+    font-size: 20px;
+  }
+  .p1 {
+    font-size: 15px;
+    line-height: 1.5;
+    padding-left: 25px;
+    padding-right: 10px;
+    text-align: justify;
   }
   
-  
-  @media (max-width: 768px) {
-    .container {
-      grid-template-columns: 1fr;
-    }
-    .title2 {
-      color: #1f1f1f;
-      font-size: 22px;
-    }
-    .title3 {
-      color: #016fff;
-      font-size: 20px;
-    }
+  .p2 {
+    font-size: 15px;
+    line-height: 1.5;
+    text-align: justify;
+    padding-left: 10px;
+    padding-right: 10px;
   }
+  .p3 {
+    font-size: 18px;
+    line-height: 2;
+    text-align: center;
+  }
+}
